fixed the problem with the wrapper being too short...had to specify min-height: 100%;

--- a/public/css/school_page.css
+++ b/public/css/school_page.css
@@ -46,8 +46,9 @@ h1#school-name {
 }
 
 .wrapper {
-    background: url("https://abs.twimg.com/a/1362702324/t1/img/wash-white-30.png") repeat scroll 0% 0% transparent;
-    height: 100%;
+    background: url("https://abs.twimg.com/a/1362702324/t1/img/wash-white-30.png") repeat fixed 0% 0% transparent;
+    background-attachment: fixed;
+    min-height: 100%;
     width: 75%;
     padding: 1px;
     margin: 0px auto;
